# anicord-contracts-matcher

./: .gitignore  README.md  anilist.py  main.py  pool.txt  pyproject.toml  requirements.txt  usernames.txt
data/: pool.txt  usernames.txt
