[project]
name = "contracts-matcher"
version = "0.0.1"

dependencies = [
  "requests",
  "mezmorize",
]
requires-python = ">=3.10"

authors = [
  {name = "kylosus", email = "jokersus.cava@gmail.com"},
  {name = "Bpendragon", email = "bpendragon@bpendragon.horse"}
]
description = "Automatic AniList matching for Anicord Contracts"
readme = "README.md"
#license = {file = "LICENSE.txt"}
